--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,10 +23,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link rel="shortcut icon" href="/Fav Icon.png">
+
+    <meta property="og:url" content="https://trafyai.com/">
+    <meta property="og:type" content="article">
+    <!-- <meta property="og:title" content="Thinking of Growing your Business? think trafy.">
+    <meta property="og:description" content="Your trusted partner for strategic growth, empowering brands to unlock their full potential and achieve targeted growth."> -->
+    <meta property="og:image" content="https://trafyai.com/Banner Image.png">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200">
+    
+    <title>Trafyai</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
   </body>
