--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,13 +27,13 @@
 
     <meta property="og:url" content="https://trafyai.com/">
     <meta property="og:type" content="article">
-    <!-- <meta property="og:title" content="Thinking of Growing your Business? think trafy.">
-    <meta property="og:description" content="Your trusted partner for strategic growth, empowering brands to unlock their full potential and achieve targeted growth."> -->
+    <meta property="og:title" content="Interactive Learning, Next Generation Courses.">
+    <meta property="og:description" content="Gain knowledge of advanced concepts with our unique Interactive, Immersive, and Adaptive learning modules and accelerate your career.">
     <meta property="og:image" content="https://trafyai.com/Banner Image.png">
     <meta property="og:image:height" content="600">
     <meta property="og:image:width" content="1200">
     
-    <title>Trafyai</title>
+    <title>Trafy</title>
   </head>
   <body>
     <div id="root">
