--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,9 +31,9 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Interactive Learning, Next Generation Courses.">
     <meta property="og:description" content="Gain knowledge of advanced concepts with our unique Interactive, Immersive, and Adaptive learning modules and accelerate your career.">
-    <meta property="og:image" content="https://trafyai.com/Banner Image.png">
+    <!-- <meta property="og:image" content="https://trafyai.com/Banner Image.png">
     <meta property="og:image:height" content="600">
-    <meta property="og:image:width" content="1200">
+    <meta property="og:image:width" content="1200"> -->
     
     <title>Trafy</title>
     <!-- Google tag (gtag.js) -->
@@ -53,7 +53,7 @@
   })(window,document,'script','dataLayer','GTM-WGB48TPN');</script>
   <!-- End Google Tag Manager -->
   </head>
-  <body>
+  <body style="margin: 0px;">
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGB48TPN"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
