--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
     <meta property="og:image:height" content="600">
     <meta property="og:image:width" content="1200"> -->
     
-    <!-- <title>Trafy</title> -->
+    <!-- <title>trafy</title> -->
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-83PYM7201C"></script>
 <script>
