--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,16 +24,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/Fav Icon.png">
-    <!-- <meta name="description" content="Gain knowledge of advanced concepts with our unique Interactive, Immersive, and Adaptive learning modules and accelerate your career.">
+   
 
-
-    <meta property="og:url" content="https://trafyai.com/">
+    <!-- <meta property="og:url" content="https://trafyai.com/">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Interactive Learning, Next Generation Courses.">
     <meta property="og:description" content="Gain knowledge of advanced concepts with our unique Interactive, Immersive, and Adaptive learning modules and accelerate your career."> -->
-    <!-- <meta property="og:image" content="https://trafyai.com/Banner Image.png">
-    <meta property="og:image:height" content="600">
-    <meta property="og:image:width" content="1200"> -->
+    <!-- <meta property="og:image" content="https://trafyai.com/Banner Image.png"> -->
+    <!-- <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200"> --> 
     
     <!-- <title>trafy</title> -->
     <!-- Google tag (gtag.js) -->
