--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/Fav Icon.png">
    
-    <meta property="og:image" content="banner-image.png" />
+    <meta property="og:image" content="https://trafyai.com/banner-image.png" />
     <meta property="og:image:height" content="600">
     <meta property="og:image:width" content="1200">
     <!-- <meta property="og:url" content="https://trafyai.com/">
