--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/Fav Icon.png">
    
+
+    <title>trafy | Interactive Learning, Next Generation Courses.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href={currentPageUrl} />
+    <meta name="description" content="Learn UI/UX designing, artificial intelligence, and digital marketing with our interactive courses and accelerate your career with expert guidance" />
+    <meta property="og:image" content="https://trafyai.com/banner-image.png" />
+    <meta property="og:image:height" content="600"/>
+    <meta property="og:image:width" content="1200"/>
     
     <!-- <meta property="og:url" content="https://trafyai.com/">
     <meta property="og:type" content="article">
