--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,15 +26,15 @@
     <link rel="shortcut icon" href="/Fav Icon.png">
    
     
-    <!-- <meta property="og:url" content="https://trafyai.com/">
+    <meta property="og:url" content="https://trafyai.com/">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Interactive Learning, Next Generation Courses.">
-    <meta property="og:description" content="Gain knowledge of advanced concepts with our unique Interactive, Immersive, and Adaptive learning modules and accelerate your career."> -->
-    <!-- <meta property="og:image" content="https://trafyai.com/Banner Image.png"> -->
-    <!-- <meta property="og:image:height" content="600">
-    <meta property="og:image:width" content="1200"> --> 
+    <meta property="og:title" content="Trafy | Interactive Learning, Next Generation Courses.">
+    <meta property="og:description" content="Learn UI/UX designing, artificial intelligence, and digital marketing with our interactive courses and accelerate your career with expert guidance"> 
+    <meta property="og:image" content="https://trafyai.com/Banner Image.png">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200"> 
     
-    <!-- <title>trafy</title> -->
+     <title>trafy</title>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-83PYM7201C"></script>
 <script>
