--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
 
     <title>trafy | Interactive Learning, Next Generation Courses.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="canonical" href={currentPageUrl} />
+    <link rel="canonical" href="https://trafyai.com/"/>
     <meta name="description" content="Learn UI/UX designing, artificial intelligence, and digital marketing with our interactive courses and accelerate your career with expert guidance" />
     <meta property="og:image" content="https://trafyai.com/banner-image.png" />
     <meta property="og:image:height" content="600"/>
@@ -38,9 +38,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Trafy | Interactive Learning, Next Generation Courses.">
     <meta property="og:description" content="Learn UI/UX designing, artificial intelligence, and digital marketing with our interactive courses and accelerate your career with expert guidance"> 
-    <meta property="og:image" content="https://trafyai.com/Banner Image.png">
-    <meta property="og:image:height" content="600">
-    <meta property="og:image:width" content="1200"> 
+     
     
      <title>trafy</title>
     <!-- Google tag (gtag.js) -->
